# datakam

./: .dir-locals.el  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Capstanfile  Cargo.toml  Dockerfile  Dockerfile.native  Makefile  Pipfile  README.md  Rocket.toml  app.js  app.py  app.py_BK  build.edn  cdk.json  cmd.sh  conanfile.txt  conaninfo.txt  config.edn  config.prod.edn  datakam.sln  datakam_local_changes.patch  deps.edn  dev-server.py  dev_to_prod  docker-compose.yml  gql_queries.txt  index.html  manage.go  nim.cfg  nodemon.json  package-lock.json  package.json  pom.xml  project.clj  repl.clj  shadow-cljs.edn  (+6 more)
.cargo/: config
.terraform/modules/: modules.json
app/: main.py
app/core/: events.py
app/models/: common.py
config/: logback.xml
controlkam/: .gitignore  .upignore  README.markdown  README.org  controlkam-test.asd  controlkam.asd  package-lock.json  package.json  up.json
controlkam/src/: auth.lisp  controlkam.lisp  os.lisp  package.lisp  publicviews.lisp  templates.lisp  templating.lisp
controlkam/svc/: ctrlkm.proto
controlkam/templates/: footer.eco  footer.lisp  header.eco  header.lisp  home.eco  home.lisp  layout.eco  layout.lisp  login.lisp
controlkam/tests/: controlkam.lisp
controlkam/tools/: buildscript.lisp  slime.lisp
controlkam_POC/: Dockerfile  README.org  up.json
controlkam_POC/src/: controlkam.lisp  os.lisp
controlkam_POC/templates/: footer.lisp  header.lisp  home.eco  login.eco
controlkam_POC/tools/: testscript.lisp
controlkam_other/: README.md  cmd.sh  tsconfig.json
controlkam_other/grpc/: ctrlkm.pb.go
cpp/: CMakeLists.txt  README.md
cpp/dalcpp/: main.cpp
data/dynamodb/: shared-local-instance.db
domain/: Library.fs
infra/devops/: cdk.json  devops.csproj
infrastructure/: .gitignore  Dockerfile  Dockerfile.lambda  Dockerfile.ubuntu  Dockerfile.ubuntu_run  cmd.sh  docker-compose.yml  ekskam.tf  gamescores_dynamodb.tf  hello_api.tf  iam.tf  kamworks_db.tf  kamworks_iam.tf  lambda.tf  logging.tf  providers.tf  pyfun_api.tf  slapman_api.tf  slapman_api_lambda.tf  slapman_autoscaling.tf  slapman_dynamodb.tf  slapman_iam.tf  slapman_lambda.tf  slapman_lambda_fn.tf  slapman_web.tf  slapman_web_lambda.tf  slapman_web_lambda.tf_DROP  slapman_website.tf  slapman_website_static.tf  slapman_worker.tf_DROP  slapman_worker_exe.tf  slapman_worker_exe.tf_DROP  terraform.tfstate  terraform.tfstate.backup  things_dynamodb.tf  user_dynamodb.tf  user_dynamodb.tf_NEW  userinfo_dynamodb.tf  userprofile_dynamodb.tf  userprofile_dynamodb.tf_NEW  (+4 more)
infrastructure/api_method/: main.tf
infrastructure/dynamodb_autoscaling/: main.tf
infrastructure/kube/: ekskam-config_map_aws_auth.yml  ekskam-kubeconfig.yml
infrastructure/lightsail_keys/: grpc_vps_servers_key  grpc_vps_servers_key.pub
infrastructure/templates/: get_inbound_mapping.json
infrastructure/web_method/: main.tf
lambda/: .gitignore  Pipfile  db.sqlite3  main.py  manage.py  requirements.txt  run.py  runner.py  web.py  worker-exe.py  worker.py
lambda/datagql/: data.py  schema.py
lambda/slapman_web/: settings.py  urls.py  wsgi.py
lambda/slapweb/: README.txt  adapter_wsgi.py  development.ini  production.ini  run.py  security.py  setup.py  wsgi.py
lambda/templates/: home.jinja2
lambda/worker/: .gitignore  __init__.py
lambda_fn/: .gitignore  Cargo.toml
lambda_fn/src/: main.rs
lib_api/: Cargo.toml  build.rs  build.rs_DONOTINCLUDE
lib_api/src/: app_state.rs  get_things_hhhh_query.graphql  lib.rs  private_rsa_key.der  private_rsa_key.pem  public_key.der  security.rs
lib_api/src/dal/: dynamodb.rs  dynatraits.rs  mod.rs
lib_api/src/dal/models/: things.rs  user_info.rs
native/: Cargo.toml  build.rs
native/src/: authentication.rs  lib.rs  macros.rs  security.rs  validation.rs
native/src/bridge/: content.rs  mod.rs  user.rs
native/src/dal/: data_access_layer.rs  dynamodb.rs  dynatraits.rs  mod.rs  tests.rs
native/src/dal/models/: constants.rs  content.rs  doc_stream.rs  document.rs  media.rs  mod.rs  tests.rs  text_block.rs  things.rs  user_info.rs
newman/: DKM (LOCAL)-2020-12-06-02-56-59-815-0.html  newman-run-report-2020-12-06-02-58-16-081-0.html  newman-run-report-2020-12-06-03-00-02-542-0.html
public/: api.html  index.html
resources/: mutation_create_new_user.graphql  mutation_user_jwt_token_refresh.graphql  query_hello.graphql  query_hello_name.graphql  query_hello_name_and_friend.graphql  query_introspection.graphql  query_nested_hero_friends_appears_in_friends.graphql  query_user_login.graphql
resources/public/: graphiql.html
resources/templates/: controlkam_up_json.tmpl  webkam_up_json.tmpl  workerfn_up_json.tmpl
slapman/: .gitignore  Gopkg.toml  main.go
slapman-web/: .upignore  Cargo.toml  up.json
slapman-web/src/: main.rs
slapman/cmd/: ingest.go  root.go  serve.go  signal.go
slapman/context/: ctx.go
slapman/handlers/: endpoints.go  error_handlers.go  public.go  sockjs.go
slapman/middleware/: custom_headers.go  database.go  (+5 more)
slapman_worker/: main.go
src/: api.rs  config.rs  constants.rs  endpoints.rs  errors.rs  lib.rs  macros.rs  main.rs  prelude.rs
tests/: integration_test.rs
view/: README.md
web/: .gitignore  .upignore  go.mod  go.sum  main.cr  main.go  up.json
worker-exe/: Cargo.toml
worker-ext/: Cargo.toml
worker-ext/src/: lib.rs
worker-fn/: .upignore  Cargo.toml  build.rs  get_things_hhhh_query.json  up.json
worker-fn/src/: app_state.rs  main.rs
worker-fn/src/api/: authvanille.rs  contentvanille.rs  mod.rs
worker-lib/: Cargo.toml
worker-lib/src/: .gitignore  authentication.rs  lib.rs  macros.rs  schema.rs  security.rs  validation.rs
worker-lib/src/dal/: data_access_layer.rs  dynamodb.rs  dynatraits.rs  mod.rs  tests.rs
worker-lib/src/dal/models/: mod.rs  things.rs  user_info.rs
worker-rpc/: .upignore  Cargo.toml  README.md  build.rs  up.json
worker-rpc/src/: main.rs
worker-rpc/src/api/: authkm.rs  authkm_grpc.rs  contentkm.rs  contentkm_grpc.rs  mod.rs
worker-rpc/src/services/: authkam.rs  contentkam.rs  mod.rs  tests.rs
worker-rpc/svc/: authkm.proto  contentkm.proto
(+305 files in other folders)
