[package]
name = "slapman"
version = "0.1.0"
authors = ["outcastgeek <outcastgeek+git@gmail.com>"]

[lib]
name = "slapman"
#crate-type = ["staticlib"]
crate-type = ["dylib"]

[dependencies]
rayon = "0.8.2"
hyper = "0.11"
log = "0.3.8"
env_logger = "0.4.3"
rusoto_core = "0.27.0"
rusoto_sqs = "0.27.0"
rusoto_s3 = "0.27.0"
rusoto_dynamodb = "0.27.0"
rusoto_dynamodbstreams = "0.27.0"
rusoto_logs = "0.27.0"
#nix = "0.9.0"
#zmq = "0.8.2"
