[package]
name = "slapman"
version = "0.1.0"
authors = ["outcastgeek <outcastgeek+git@gmail.com>"]

[dependencies]
dotenv = "0.10.1"
rust-ini = "0.10.0"
console = "0.5.0"
indicatif = "0.6.0"
error-chain = "0.10.0"
lazy_static = "0.2.8"
rayon = "0.8.2"
hyper = "0.11"
curl = "0.4.8"
url = "1.5.1"
log = "0.3.8"
env_logger = "0.4.3"
regex = "0.2.2"
#tensorflow = "0.4.0"
rusoto_core = "0.27.0"
rusoto_sqs = "0.27.0"
rusoto_s3 = "0.27.0"
rusoto_dynamodb = "0.27.0"
rusoto_dynamodbstreams = "0.27.0"
rusoto_logs = "0.27.0"
nix = "0.9.0"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
rocket = "0.3.2"
rocket_codegen = "0.3.2"
rocket_contrib = "0.3.2"
time = "0.1.38"
r2d2 = "0.7.3"
r2d2_postgres = "0.13.0"
r2d2_mysql = "7.1.0"
#r2d2_mysql = "8.0.0"
r2d2_sqlite = "0.2.1"
[dependencies.rusqlite]
version = "0.12.0"
features = ["bundled"]
[dependencies.chrono]
features = ["serde"]
version = "^0.4.0"
[target."cfg(not(windows))".dependencies]
openssl-probe = "0.1.1"
