[package]
name = "lambda_fn"
version = "0.1.0"
authors = ["outcastgeek <outcastgeek+git@gmail.com>"]

[dependencies]
lib_api = { path = "../lib_api" }
aws_lambda = { git = "https://github.com/srijs/rust-aws-lambda" }
# Logging
log = { version = "0.4", features = ["std", "serde", "max_level_debug", "release_max_level_warn"] }
# Json
serde_derive = "1.0.75"
