[package]
name = "lib_api"
version = "0.1.0"
authors = ["outcastgeek <outcastgeek+git@gmail.com>"]

[dependencies]
# Web
env_logger = "0.5"
actix = "0.7"
actix-web = "0.7"
uuid = "0.6.5"
validator = "0.7"
validator_derive = "0.7"

# Concurrency
rayon = "1.0"
#futures = "0.2.1"
futures = "0.1"
timely = "0.5.1"
tokio = "0.1.7"
num_cpus = "1.0"

# Crypto
data-encoding = "2.1.1"
ring = "0.13.2"
jsonwebtoken = "5.0.0"
# Json
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# GraphQL
juniper = "0.9.2"
juniper_codegen = "0.9.2"

# AWS
rusoto_core = "0.33"
rusoto_sqs = "0.33"
rusoto_s3 = "0.33"
rusoto_dynamodb = "0.33"
