[package]
name = "datakam"
version = "0.1.0"
authors = ["outcastgeek"]
license = "MIT"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "datakam"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4"
#neon-serde = "0.3"
bytes = "0.5"
tokio = { version = "0.2", features = ["full"] }
sqlx = "0.3"

# Web
env_logger = "0.7"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
#log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
trace = "0.1"
uuid = { version = "0.8", features = ["v4"] }
validator = "0.10"
validator_derive = "0.10"
surf = "2.0.0-alpha.1"

# Concurrency
rayon = "1.3"
crossbeam = "0.7"
futures = "0.3"

# Crypto
data-encoding = "2.2"
ring = "0.16"
jsonwebtoken = "7.1"

# Json
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# AWS
rusoto_core = "0.43"
rusoto_sqs = "0.43"
rusoto_s3 = "0.43"
rusoto_dynamodb = "0.43"
