[package]
name = "slapman-web"
version = "0.1.0"
authors = ["outcastgeek <outcastgeek+git@gmail.com>"]
edition = "2018"

[dependencies]
worker-lib = { path = "../worker-lib" }
env_logger = "0.5"
openssl-probe = "0.1"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
#log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
# Web
actix = "0.7"
actix-web = "0.7"
handlebars = "1.0"
# Json
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
