
#cargo-features = ["edition"]
[package]
#edition = "2018"
name = "worker-ext"
version = "0.1.0"
authors = ["outcastgeek <outcastgeek+git@gmail.com>"]
edition = "2018"

[lib]
name = "workerext"
#crate-type = ["cdylib"]
crate-type = ["dylib"]

[dependencies]
worker-lib = { path = "../worker-lib" }
#pyo3 = { version = "0.3",features = ["extension-module"] }
#pyo3 = { version = "0.4",features = ["extension-module"] }
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
