
#cargo-features = ["edition"]
[package]
#edition = "2018"
name = "worker-lib"
version = "0.1.0"
authors = ["outcastgeek <outcastgeek+git@gmail.com>"]

#[lib]
#crate-type = ["staticlib"]
#crate-type = ["cdylib"] # For WebAssembly

[dependencies]
# Web Assembly
#wasm-bindgen = "0.2"
# Web
env_logger = "0.5"
log = { version = "0.4", features = ["std", "serde", "max_level_debug", "release_max_level_warn"] }
uuid = { version = "0.6", features = ["v4"] }
validator = "0.7"
validator_derive = "0.7"

# Crypto
data-encoding = "2.1.1"
ring = "0.13.2"
jsonwebtoken = "5.0.0"
# Json
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# GraphQL
juniper = "0.9.2"
juniper_codegen = "0.9.2"

# AWS
rusoto_core = "0.34"
rusoto_sqs = "0.34"
rusoto_s3 = "0.34"
rusoto_dynamodb = "0.34"
