
[package]
name = "worker-lib"
version = "0.1.0"
authors = ["outcastgeek <outcastgeek+git@gmail.com>"]
edition = "2018"

#[lib]
#crate-type = ["staticlib"]
#crate-type = ["cdylib"] # For WebAssembly

[dependencies]
# Web Assembly
#wasm-bindgen = "0.2"
# Web
env_logger = "0.5"
log = { version = "0.4", features = ["max_level_debug", "release_max_level_debug"] }
#log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
uuid = { version = "0.6", features = ["v4"] }
validator = "0.7"
validator_derive = "0.7"

# Concurrency
rayon = "1.0"
crossbeam = "0.6"

# Crypto
data-encoding = "2.1.1"
ring = "0.13.2"
jsonwebtoken = "5.0.0"

# Json
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

# GraphQL
juniper = "0.11"
juniper_codegen = "0.11"

# Time
chrono = { version = "0.4", features = ["serde"] }

# AWS
rusoto_core = "0.36"
rusoto_sqs = "0.36"
rusoto_s3 = "0.36"
rusoto_dynamodb = "0.36"
